# pymjolnir

./: .editorconfig  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  agent-handover.md  improvements.md  pyproject.toml  typos.toml
.cursor/rules/: agent-handoff-log.mdc  conventional-commit-suggestion.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-metadata.yml  dependency-review.yml  publish-pypi.yml  release.yml  sbom.yml  secret-scan.yml
docs/: README.md  ai-agent-handoff.md  improvements.md
src/pymjolnir/: __init__.py  factory.py  singleton.py
tests/: conftest.py  test_factory.py  test_pymjolnir.py  test_singleton.py
