[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymjolnir"
version = "0.1.0"
description = "Design patterns Python library"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "pymjolnir" }]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pylint",
    "flake8",
    "ruff",
    "radon",
    "docstr-coverage",
    "pydoclint",
    "mypy",
    "bandit",
    "pip-audit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymjolnir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pymjolnir --cov-report=term-missing --cov-report=xml --cov-fail-under=95"

[tool.coverage.run]
source = ["pymjolnir"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100

[tool.bandit]
skips = ["B101"]
